[project]
name = "Flask-Uploader"
description = "File uploader for Flask with flexible extensibility."
license = {file = "LICENSE"}
authors = [
    {name = "Kirill Vercetti", email = "office@kyzima-spb.com"},
]
dynamic = ["version", "readme"]
requires-python = ">=3.7"
dependencies = [
    "flask>=0.11",
    "Flask-WTF>=0.13",
    "Pillow>=8.0",
    "importlib-metadata; python_version<'3.8'",
    "typing_extensions; python_version<'3.9'",
]
keywords = [
    "flask",
    "flask upload",
    "flask upload files",
    "file uploader",
    "flask aws s3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CHANGES.rst", "LICENSE"]}

[project.urls]
Homepage = "https://github.com/kyzima-spb/flask-uploader"
Repository = "https://github.com/kyzima-spb/flask-uploader.git"
"Issue Tracker" = "https://github.com/kyzima-spb/flask-uploader/issues"
"Change log" = "https://github.com/kyzima-spb/flask-uploader#flask-uploader"

[project.optional-dependencies]
aws = [
    "boto3>=1.22",
]
pymongo = [
    "flask-pymongo>=2.3",
]
dev = [
    "pytest>=7.1",
    "pytest-mock>=3.7",
    "flake8>=4",
    "boto3-stubs-lite[s3]",
    "mypy>=0.950",
    "types-pillow",
]


[build-system]
requires = ["setuptools>=50", "wheel", "setuptools_scm>=6.2"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
fallback_version = "0.0.0"


[tool.pytest.ini_options]
addopts = "-v -s"
testpaths = ["tests"]


[tool.mypy]
files = ["src/flask_uploader"]
python_version = "3.7"
strict = true
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = [
    "flask_pymongo.*",
    "flask_wtf.*",
    "importlib.*",
    "importlib_metadata.*",
    "wtforms.*",
]
ignore_missing_imports = true
