[metadata]
name = flask-uploader
url = https://github.com/kyzima-spb/flask-uploads
project_urls =
    Source Code = https://github.com/kyzima-spb/flask-uploader/
    Issue Tracker = https://github.com/kyzima-spb/flask-uploader/issues/
license = MIT
license_files = LICENSE
author = Kirill Vercetti
author_email = office@kyzima-spb.com
description = File uploader for Flask with flexible extensibility.
long_description = file: README.rst, LICENSE
long_description_content_type = text/x-rst
keywords =
    flask
    flask upload
    flask upload files
    file uploader
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >= 3.7

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
addopts = -v -s

[mypy]
files = src/flask_uploader
;python_version = 3.7
strict = True

[mypy-wtforms.*]
ignore_missing_imports = True

[mypy-flask_pymongo.*]
ignore_missing_imports = True
